--- a/src/components/home/ProjectCard.astro
+++ b/src/components/home/ProjectCard.astro
@@ -24,7 +24,7 @@ const {
   altText
 } = Astro.props
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  '/src/assets/projects/*.{jpeg,jpg,png,gif,avif.webp}'
+  '/src/assets/projects/*.{jpeg,jpg,png,gif,avif.webp,png}'
 )
 if (!images[imagePath])
   throw new Error(
