--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,21 +108,19 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       }
       <Section title='Education'>
         <div class='flex flex-col gap-4'>
-          <Card
+          <ProjectCard
             heading='未来ガジェット研究所'
             subheading='Brain Computer Interaction for future haven'
-            date='August 2024 - Present'
-            imagePath={eduFutureGadgetLab}
+            imagePath='education-future-gadget-lab copy.png'
             altText='Future Gadget Lab'
-            imageClass='h-16 w-auto md:-start-16'
+            class='h-16 w-auto md:-start-16'
           />
-          <Card
+          <ProjectCard
             heading='中国人民大学附属中学'
             subheading='ICC'
-            date='Aug 2021 - May 2024'
-            imagePath={eduRdfz}
+            imagePath='education-rdfz copy.png'
             altText='RDFZ'
-            imageClass='h-16 w-auto md:-start-16'
+            class='h-16 w-auto md:-start-16'
           />
         </div>
       </Section>
