--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -111,14 +111,14 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           <ProjectCard
             heading='未来ガジェット研究所'
             subheading='Brain Computer Interaction for future haven'
-            imagePath='education-future-gadget-lab copy.png'
+            imagePath='education-future-gadget-lab.png'
             altText='Future Gadget Lab'
             class='h-16 w-auto md:-start-16'
           />
           <ProjectCard
             heading='中国人民大学附属中学'
             subheading='ICC'
-            imagePath='education-rdfz copy.png'
+            imagePath='education-rdfz.png'
             altText='RDFZ'
             class='h-16 w-auto md:-start-16'
           />
