--- a/src/components/home/ProjectCard.astro
+++ b/src/components/home/ProjectCard.astro
@@ -8,7 +8,7 @@ import { cn } from 'astro-pure/utils'
 type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }> & {
   heading: string
   subheading: string
-  imagePath: string
+  imagePath?: string
   altText?: string
   href?: string
   class?: string
@@ -26,10 +26,6 @@ const {
 const images = import.meta.glob<{ default: ImageMetadata }>(
   '/src/assets/projects/*.{jpeg,jpg,png,gif,avif.webp,png}'
 )
-if (!images[imagePath])
-  throw new Error(
-    `"${imagePath}" does not exist in glob: "src/assets/projects/*.{jpeg,jpg,png,gif,avif.webp}"`
-  )
 ---
 
 <Tag
@@ -41,12 +37,14 @@ if (!images[imagePath])
   href={href}
   target='_blank'
 >
-  <Image
-    src={images[imagePath]()}
-    alt={altText ?? heading}
-    class='absolute top-0 h-36 w-full object-cover opacity-60 transition-opacity group-hover:opacity-100 dark:opacity-35'
-    loading='lazy'
-  />
+  {imagePath && images[imagePath] && (
+    <Image
+      src={images[imagePath]()}
+      alt={altText ?? heading}
+      class='absolute top-0 h-36 w-full object-cover opacity-60 transition-opacity group-hover:opacity-100 dark:opacity-35'
+      loading='lazy'
+    />
+  )}
   <div class='project-card-fg z-10 flex flex-col gap-y-0.5 px-5 pb-4 pt-24 transition-all'>
     <h2 class='text-lg font-medium'>{heading}</h2>
     <p class='text-muted-foreground'>{subheading}</p>
