--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -12,7 +12,8 @@ export const prerender = true
 
 export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
   const allPosts = await getBlogCollection()
-  const allPostsByDate = sortMDByDate(allPosts)
+  const publishedPosts = allPosts.filter(post => !post.data.draft)
+  const allPostsByDate = sortMDByDate(publishedPosts)
   const uniqueTags = getUniqueTags(allPostsByDate)
 
   return uniqueTags.flatMap((tag) => {
