--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,8 @@ const backend = ['Vercel', 'Waline']
 
 const MAX_POSTS = 10
 const allPosts = await getBlogCollection()
-const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
+const publishedPosts = allPosts.filter(post => !post.data.draft)
+const allPostsByDate = sortMDByDate(publishedPosts).slice(0, MAX_POSTS)
 ---
 
 <PageLayout meta={{ title: 'Home' }} highlightColor='#659EB9'>
