--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 import { prod } from 'astro-pure/server'
 import type { SiteMeta } from 'astro-pure/types'
 import config from '@/site-config'
+import { withBase } from '@/utils/url'
 
 type Props = SiteMeta
 
@@ -9,7 +10,8 @@ const { articleDate, description, ogImage, title } = Astro.props
 
 const siteTitle = `${title} ${config.titleDelimiter} ${config.title}`
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-const socialImageURL = new URL(ogImage ? ogImage : '/images/social-card.png', Astro.url).href
+const defaultOgImage = withBase('images/social-card.png')
+const socialImageURL = new URL(ogImage ?? defaultOgImage, Astro.url).href
 ---
 
 <meta charset='utf-8' />
@@ -18,16 +20,36 @@ const socialImageURL = new URL(ogImage ? ogImage : '/images/social-card.png', As
 <title>{siteTitle}</title>
 
 {/* Icons / Favicon */}
-<link rel='apple-touch-icon' sizes='180x180' href='/favicon/apple-touch-icon.png' />
-<link rel='icon' type='image/png' sizes='32x32' href='/favicon/favicon-32x32.png' />
-<link rel='icon' type='image/png' sizes='16x16' href='/favicon/favicon-16x16.png' />
-<link rel='manifest' href='/favicon/site.webmanifest' />
+<link
+  rel='apple-touch-icon'
+  sizes='180x180'
+  href={withBase('favicon/apple-touch-icon.png')}
+/>
+<link
+  rel='icon'
+  type='image/png'
+  sizes='32x32'
+  href={withBase('favicon/favicon-32x32.png')}
+/>
+<link
+  rel='icon'
+  type='image/png'
+  sizes='16x16'
+  href={withBase('favicon/favicon-16x16.png')}
+/>
+<link rel='manifest' href={withBase('favicon/site.webmanifest')} />
 
 {/* Font preloads */}
-<link rel='preload' href='/fonts/Satoshi-Variable.ttf' as='font' type='font/ttf' crossorigin />
 <link
   rel='preload'
-  href='/fonts/Satoshi-VariableItalic.ttf'
+  href={withBase('fonts/Satoshi-Variable.ttf')}
+  as='font'
+  type='font/ttf'
+  crossorigin
+/>
+<link
+  rel='preload'
+  href={withBase('fonts/Satoshi-VariableItalic.ttf')}
   as='font'
   type='font/ttf'
   crossorigin
@@ -71,20 +93,20 @@ const socialImageURL = new URL(ogImage ? ogImage : '/images/social-card.png', As
 <meta content={socialImageURL} property='twitter:image' />
 
 {/* Sitemap */}
-<link href='/sitemap-index.xml' rel='sitemap' />
+<link href={withBase('sitemap-index.xml')} rel='sitemap' />
 
 {/* RSS auto-discovery */}
 <link
   rel='alternate'
   type='application/rss+xml'
   title={config.title}
-  href={`${Astro.site}rss.xml`}
+  href={new URL(withBase('rss.xml'), Astro.site).href}
 />
 
 <meta content={Astro.generator} name='generator' />
 
 {/* Styles */}
-<link rel='stylesheet' href='/styles/global.css' />
+<link rel='stylesheet' href={withBase('styles/global.css')} />
 
 {
   /* User script*/
