--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,7 @@
 ---
 import { Button } from 'astro-pure/user'
 import PageLayout from '@/layouts/BaseLayout.astro'
+import { withBase } from '@/utils/url'
 
 const meta = {
   description: 'Not found',
@@ -13,6 +14,6 @@ const meta = {
     <h1 class='block text-7xl font-bold sm:text-9xl'>404</h1>
     <p class='mt-3 text-muted-foreground'>Oops, something went wrong.</p>
     <p class='text-lg'>Sorry, we couldn't find your page.</p>
-    <Button title='Back to home' href='/' variant='ahead' class='mt-5' />
+    <Button title='Back to home' href={withBase('/')} variant='ahead' class='mt-5' />
   </div>
 </PageLayout>
