--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -3,6 +3,7 @@ import { Button, Collapse, Spoiler, Timeline } from 'astro-pure/user'
 import PageLayout from '@/layouts/CommonPage.astro'
 import Substats from '@/components/about/Substats.astro'
 import ToolSection from '@/components/about/ToolSection.astro'
+import { withBase } from '@/utils/url'
 
 const headings = [
   { depth: 2, slug: 'hobbies', text: 'Hobbies' },
@@ -23,7 +24,12 @@ const headings = [
   <p>
     My motto: Stay hungry, Stay foolish. <Spoiler>这里可以夹私货，比如为什么要演奏春日影！</Spoiler>
   </p>
-  <Button title='Sponsor Me' class='w-fit' href='/projects#sponsorship' variant='ahead' />
+  <Button
+    title='Sponsor Me'
+    class='w-fit'
+    href={withBase('projects#sponsorship')}
+    variant='ahead'
+  />
 
   {/* general-talk */}
   <h2 id='hobbies'>Hobbies</h2>
