--- a/src/pages/search/index.astro
+++ b/src/pages/search/index.astro
@@ -3,6 +3,7 @@ import { PFSearch } from 'astro-pure/components/pages'
 import { Button } from 'astro-pure/user'
 import PageLayout from '@/layouts/BaseLayout.astro'
 import { integ } from '@/site-config'
+import { withBase } from '@/utils/url'
 
 const meta = {
   description: 'Search relative posts of the whole blog',
@@ -11,7 +12,7 @@ const meta = {
 ---
 
 <PageLayout {meta}>
-  <Button title='Back' href='/blog' variant='back' />
+  <Button title='Back' href={withBase('blog')} variant='back' />
   <main class='mt-6 lg:mt-10'>
     <div id='content-header' class='animate'>
       <h1 class='mb-6 text-3xl font-medium'>Search</h1>
