--- a/src/pages/terms/list.astro
+++ b/src/pages/terms/list.astro
@@ -3,6 +3,7 @@ import { Button, CardList } from 'astro-pure/user'
 import { cn } from 'astro-pure/utils'
 import PageLayout from '@/layouts/BaseLayout.astro'
 import { integ, terms } from '@/site-config'
+import { withBase } from '@/utils/url'
 
 const meta = {
   title: 'Site policy',
@@ -11,7 +12,7 @@ const meta = {
 ---
 
 <PageLayout {meta}>
-  <Button title='Back' href='/' variant='back' />
+  <Button title='Back' href={withBase('/')} variant='back' />
   <main class='mt-6 lg:mt-10'>
     <div id='content-header' class='animate'>
       <h1 class='mb-6 text-3xl font-medium'>Site Policy</h1>
