--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,10 @@
 ---
-import { Footer, Header, ThemeProvider } from 'astro-pure/components/basic'
+import { ThemeProvider } from 'astro-pure/components/basic'
 import type { SiteMeta } from 'astro-pure/types'
 import BaseHead from '@/components/BaseHead.astro'
 import config from '@/site-config'
+import Footer from '@/components/custom/Footer.astro'
+import Header from '@/components/custom/Header.astro'
 
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseLayout /> component.
