--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets'
 
 import Quote from '@/components/home/Quote.astro'
-import { PostPreview } from 'astro-pure/components/pages'
+import PostPreview from '@/components/custom/PostPreview.astro'
 import { getBlogCollection, sortMDByDate } from 'astro-pure/server'
 import { Button, Card, Icon, Label } from 'astro-pure/user'
 import eduFutureGadgetLab from '@/assets/projects/education-future-gadget-lab.png'
