--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -137,11 +137,8 @@ const allPostsByDate = sortMDByDate(publishedPosts).slice(0, MAX_POSTS)
 
       <Section title='Certifications'>
         <Card
-          as='a'
-          heading='Lorem ipsum'
-          subheading='Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel, at eum oratio possit voluptatum. Dicat ceteros cu vim. Impetus fuisset ullamcorper pri cu, his posse iisque ad, aliquam honestatis usu id.'
-          date='July 2024'
-          href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
+          heading='South Servery Chess King'
+          subheading='在Wises和Hanszen击败一众高手成为南侧食堂棋王'
         />
       </Section>
 
