--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -17,9 +17,11 @@ const headings = [
 <PageLayout title='About' {headings} comment>
   <p>Developer / Designer</p>
   <p>
-    Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione indoctum
-    dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel, at eum oratio
-    possit voluptatum.
+    Hi My real name is Yechen Liu. I am currently working as a student researcher at Scientific
+    Machine Learning (SciML) and an intern at Houston Asian American Archieve. I have many interests
+    in multiple fields, including computational science, chemistry, ethnic integration of Asian
+    immigrants in the United States, the history of the Ming Dynasty, and Communist governmental
+    organizations.
   </p>
   <p>
     My motto: Stay hungry, Stay foolish. <Spoiler>这里可以夹私货，比如为什么要演奏春日影！</Spoiler>
