--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -36,13 +36,27 @@ const headings = [
   {/* general-talk */}
   <h2 id='hobbies'>Hobbies</h2>
   <ul>
-    <li>Lorem ipsum dolor sit amet, vidit suscipit at mei.</li>
     <li>
-      Quem denique mea id. Usu ei regione indoctum dissentiunt, cu meliore fuisset mei, vel quod
-      voluptua ne.
+      Gaming
+      <ul>
+        <li>Battlefield V</li>
+        <li>Battlefield I</li>
+        <li>Cyberpunk 2077</li>
+        <li>Hogwarts Legacy</li>
+        <li>Genshin Impact</li>
+        <li>Minecrafts</li>
+      </ul>
     </li>
-    <li>Ex dicat impedit mel, at eum oratio possit voluptatum.</li>
-    <li>Impetus fuisset ullamcorper pri cu, his posse iisque ad, aliquam honestatis usu id.</li>
+    <li>
+      Sports
+      <ul>
+        <li>Chess♟️</li>
+        <li>Fencing🤺</li>
+      </ul>
+    </li>
+    <li>
+      <del>YouTube新官场忠实读者</del>（用横线划掉）
+    </li>
   </ul>
 
   {/* tools */}
@@ -119,6 +133,12 @@ const headings = [
         icon: import('@/assets/tools/vscode.svg?raw')
       },
       {
+        name: 'Cursor',
+        description: 'IDE',
+        href: 'https://www.cursor.com/',
+        icon: import('@/assets/tools/cursor.svg?raw')
+      },
+      {
         name: 'Neovim',
         description: 'IDE',
         href: 'https://neovim.io/',
@@ -129,6 +149,12 @@ const headings = [
         description: 'IDE',
         href: 'https://www.sublimetext.com/',
         icon: import('@/assets/tools/sublime.svg?raw')
+      },
+      {
+        name: 'Vim',
+        description: 'Text Editor',
+        href: 'https://www.vim.org/',
+        icon: import('@/assets/tools/vim.svg?raw')
       }
     ]}
   />
