--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -182,7 +182,7 @@ const headings = [
       },
       {
         name: 'Windows 11',
-        description: 'Framework Laptop 16',
+        description: 'ASUS ROG Strix G16 (2025)',
         href: 'https://news.microsoft.com/windows11-general-availability/',
         icon: import('@/assets/tools/windows11.svg?raw')
       }
