--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -15,7 +15,7 @@ export const prerender = true
 export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
   const allPosts = await getBlogCollection()
   const publishedPosts = allPosts.filter(post => !post.data.draft)
-  const allPostsByDate = sortMDByDate(publishedPosts)
+  const allPostsByDate = sortMDByDate(publishedPosts) as CollectionEntry<'blog'>[]
   const uniqueTags = getUniqueTags(allPostsByDate)
 
   return uniqueTags.flatMap((tag) => {
