--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -24,14 +24,8 @@ const headings = [
     organizations.
   </p>
   <p>
-    My motto: Stay hungry, Stay foolish. <Spoiler>这里可以夹私货，比如为什么要演奏春日影！</Spoiler>
+    My motto: 见诸相非相，即见如来. <Spoiler>你知道的太多了</Spoiler>
   </p>
-  <Button
-    title='Sponsor Me'
-    class='w-fit'
-    href={withBase('projects#sponsorship')}
-    variant='ahead'
-  />
 
   {/* general-talk */}
   <h2 id='hobbies'>Hobbies</h2>
@@ -55,7 +49,7 @@ const headings = [
       </ul>
     </li>
     <li>
-      <del>YouTube新官场忠实读者</del>（用横线划掉）
+      <del>YouTube新官场忠实读者</del>
     </li>
   </ul>
 
@@ -200,31 +194,15 @@ const headings = [
       {
         platform: 'GitHub',
         icon: 'github',
-        link: 'https://github.com/cworld1',
+        link: 'https://github.com/user309dec',
         text: 'followers',
-        api: 'github/cworld1'
-      },
-      {
-        platform: 'Telegram',
-        icon: 'telegram',
-        color: '#2ca5e0',
-        link: 'https://t.me/cworld0_cn',
-        text: 'subscribers',
-        api: 'telegram/cworld0_cn'
-      },
-      {
-        platform: 'Weibo',
-        icon: 'weibo',
-        color: '#e71f19',
-        link: 'https://weibo.com/cworld0',
-        text: 'followers',
-        api: 'weibo/5501674056'
+        api: 'github/user309dec'
       },
       {
         platform: 'Steam',
         icon: 'steam',
         color: '#50769d',
-        link: 'https://steamcommunity.com/id/cworld',
+        link: 'https://steamcommunity.com/id/fkin_amazing',
         text: 'games',
         api: 'steamgames/76561199021278120'
       }
@@ -245,18 +223,18 @@ const headings = [
   <Timeline
     events={[
       {
-        date: '2024-04-29',
+        date: '2024-09-22',
         content:
           'Website refactored using <a href="https://astro.build/" target="_blank">Astro</a> and <a href="https://github.com/srleom/astro-theme-resume" target="_blank">Astro Theme Resume</a>'
       },
       {
-        date: '2024-07-26',
+        date: '2024-09-20',
         content:
-          'Website abstracted as a theme and published on <a href="https://github.com/cworld1/astro-theme-pure"target="_blank">Github</a>'
+          'Website abstracted as a theme and published on <a href="https://user309dec.github.io/YokohamaSnowlyBlog/"target="_blank">Github</a>'
       },
       {
-        date: '2024-07-27',
-        content: 'Began writing website docs'
+        date: '2024-09-19',
+        content: 'Began writing website docs and implemented a bunch of features'
       }
     ]}
   />
