--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,9 +1,8 @@
 ---
-import { Button, Collapse, Spoiler, Timeline } from 'astro-pure/user'
+import { Collapse, Spoiler, Timeline } from 'astro-pure/user'
 import PageLayout from '@/layouts/CommonPage.astro'
 import Substats from '@/components/about/Substats.astro'
 import ToolSection from '@/components/about/ToolSection.astro'
-import { withBase } from '@/utils/url'
 
 const headings = [
   { depth: 2, slug: 'hobbies', text: 'Hobbies' },
@@ -230,7 +229,7 @@ const headings = [
       {
         date: '2024-09-20',
         content:
-          'Website abstracted as a theme and published on <a href="https://user309dec.github.io/YokohamaSnowlyBlog/"target="_blank">Github</a>'
+          'Website abstracted as a theme and published on <a href="https://user309dec.github.io/YokohamaSnowlyBlog/" target="_blank">Github</a>'
       },
       {
         date: '2024-09-19',
