--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -126,7 +126,7 @@ const allPostsByDate = sortMDByDate(publishedPosts).slice(0, MAX_POSTS)
             />
             <ProjectCard
               heading='中国人民大学附属中学'
-              subheading='ICC'
+              subheading='C1'
             />
         </div>
       </Section>
